spec: Adjust title in Pflichtenheft

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -1,7 +1,7 @@
 \documentclass[parskip=full,11pt,twoside]{scrartcl}
 \usepackage[utf8]{inputenc}
 
-\title{Viper: VIsual Prolog Education Runtime}
+\title{VIPER: Viper Interactive Prolog Education Runtime}
 \author{Paul Brinkmeier, Luke Brocke, Christian Oder, Aaron Maier, Jannik Koch}
 
 % section numbers in margins:
