--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -203,9 +203,87 @@ Der aktuell angezeigte Graph lässt sich durch ein Dialogfenster als Bild export
 \test{Interpretierung von Hello World}{tst:helloworld}
 \tests{fnc:interpreter}
 
-\teststep{Nutzer \enquote{Max Mustermann} hat ein Standard Hello-World Programm in den Editor eingegeben.}
-{Max klickt auf die Run-Schaltfläche des Hauptfensters.}
+\teststep{Ein Standard Hello-World Programm ist in den Editor eingegeben.}
+{Der Nutzer klickt auf die Run-Schaltfläche des Hauptfensters.}
 {Das Programm gibt die Ausgabe \enquote{Hello World} zurück.}
+
+\test{Öffnen und Schließen des Programms}{tst:openandclose}
+\tests{fnc:openandclose}
+
+\teststep{Das Programm befindet sich entpackt auf dem Desktop.}
+{Der Nutzer führt die Programmdatei aus.}
+{Das Programm öffnet sich.}
+
+\teststep{Das Programm wird ausgeführt und ist fokussiert.}
+{Der Nutzer versucht, das Programm über den Schließen-Button zu beenden.}
+{Das Programm beendet sich.}
+
+\test{Öffnen und Speichern einer Prolog-Textdatei}{tst:openandsave}
+\tests{fnc:openandsave}
+
+\teststep{Das Programm wird ausgeführt und ist fokussiert.}
+{Der Nutzer wählt über das Datei-Kontextmenü die Öffnen-Funktion aus.}
+{Ein Datei-Auswahldialog öffnet sich.}
+
+\teststep{Der Nutzer hat eine Datei über das Auswahlfenster ausgewählt.}
+{Der Nutzer betätigt den Öffnen-Button.}
+{Die Datei wird im Editor-Fenster geöffnet.}
+
+\teststep{Der Nutzer hat Änderungen an der geöffneten Datei durchgeführt}
+{Der Nutzer wählt über das Datei-Kontextmenü die Speichern-Funktion aus.}
+{Die ursprüngliche Datei wird überschrieben.}
+
+\test{Eine neue Datei erstellen und speichern}{tst:savenewfile}
+\tests{fnc:savenewfile}
+
+\teststep{Das Program wird ausgeführt und ist fokussiert.}
+{Der Nutzer wählt über das Datei-Kontextmenü die Neu-Funktion aus.}
+{Im Editor-Fenster wird eine leere Datei zur Bearbeitung angezeigt.}
+
+\teststep{Der Nutzer hat ein Prolog-Programm im Editor eingetragen.}
+{Der Nutzer wählt über das Datei-Kontextmenü die Speichern-unter-Funktion aus.}
+{Ein Datei-Erstellungsdialog öffnet sich.}
+
+\teststep{Der Nutzer hat die Datei im Erstellungsdialog benannt und das Verzeichnis ausgewählt.}
+{Der Nutzer betätigt den Speichern-Button..}
+{Eine neue Datei mit dem gewählten Dateinamen wird im gewählten Verzeichnis erstellt. Der Inhalt des Editor-Fensters wird in diese Datei geschrieben. Die Dateieindung \enquote{.pl} wird gegebenenfalls ergänzt.}
+
+% TODO: Als Fehlerdialog oder im Interpreter oder beides?
+\test{Inkorrektes Prolog-Programm}{tst:syntaxcheck}
+\tests{fnc:syntaxcheck}
+
+\teststep{Der Nutzer hat ein inkorrektes Prolog-Programm in den Editor eingetragen.}
+{Der Nutzer betätigt die Run-Schaltfläche, um das Programm auszuführen.}
+{Die Ausführung wird abgebrochen und eine verständliche Fehlermeldung wird angezeigt.}
+
+\test{Nutzung von Breakpoints im Debugger}{tst:debugger}
+\tests{fnc:debugger}
+
+\teststep{Der Nutzer hat einen Breakpoint gesetzt.}
+{Der Nutzer betätigt die Debug-Schaltfläche, um das Programm im Debug-Modus auszuführen.}
+{Die Ausführung hält am Breakpoint und bietet einen Interpreter für Eingaben, die bisher etablierte Prolog-Fakten beachten.}
+
+\test{Export von Bilddateien}{tst:imageexport}
+\tests{fnc:imageexport}
+
+\teststep{Der Nutzer hat ein visualisiertes Programm im Editor eingetragen.}
+{Der Nutzer wählt über das Datei-Kontextmenü die Bild-exportieren-Funktion aus.}
+{Ein Export-Dialog öffnet sich.}
+
+\teststep{Der Nutzer hat im Export-Dialog das Dateiformat sowie den Dateinamen und das Zielverzeichnis ausgewählt.}
+{Der Nutzer betätigt den Speichern-Button.}
+{Die Visualisierung wird im ausgewählten Dateiformat in dem ausgewählten Zielverzeichnis als Bild abgelegt. Eine passende Dateieendung wird wenn nötig ergänzt.}
+
+\test{Export als LaTeX für Foliensätze}{tst:latexexport}
+\tests{fnc:latexexport}
+
+\teststep{Der Nutzer hat ein visualisiertes Programm im Editor eingetragen.}
+{Der Nutzer wählt über das Datei-Kontextmenü die LaTeX-exportieren-Funktion aus.}
+{Ein Export-Dialog öffnet sich.}
+
+\teststep{Der Nutzer hat im Export-Dialog den Dateinamen und das Zielverzeichnis ausgewählt. Mindestens eine der Export-Optionen \enquote{Quellcode} oder \enquote{Visualisierung} sind ausgewählt.}
+{Der Nutzer betätigt den Speichern-Button.}
+{Je nach Export-Optionen werden Quellcode und/oder Visualisierung als LaTeX-Datei für Präsentationsfolien exportiert. Die passende \enquote{.tex} Dateieendung wird wenn nötig ergänzt.}
 
 %%%%%%%%%%%%%
 \pagebreak
