spec: Fix references to tests

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -142,10 +142,13 @@ Bei erfolgreicher Interpretation einer Datei ohne Fehler stellt die Konsole die 
 
 Die letzte Abfrage, die durch die Konsole eingegeben wurde, wird in einem seperaten Fenster grafisch aufbereitet, um beim Verständnis von Prolog und speziell der Interpretation von Programmen zu unterstützen.
 
-\functionality{Auswahl des anzuzeigenden Interpretations-Schritts für den Graphen.}{fnc:debugger}
-\fulfills{crt:debugger}
+\functionality{Auswahl des anzuzeigenden Interpretations-Schritts für den Graphen.}{fnc:slider}
+\fulfills{crt:slider}
 
 Der gewünschte Interpretations-Schritt kann durch eine Leiste über alle möglichen Schritte ausgewählt werden, wodurch sich der angezeigte Graph aktualisiert.
+
+\functionality{Debuggen des Prolog Programmes durch Limitierung der interpretierten Fakten.}{fnc:debugger}
+\fulfills{crt:debugger}
 
 \functionality{Vergrößern, Verkleinern und Bewegen des visualisierten Graphen durch Bewegungen mit der Maus}{fnc:zoom}
 \fulfills{crt:zoom}
@@ -170,9 +173,6 @@ Der aktuell angezeigte Graph lässt sich durch ein Dialogfenster als Bild export
 
 \functionality{Setzen von Break-Points für den Debugger}{fnc:breakpoints}
 \fulfills{crt:breakpoints}
-
-\functionality{Debuggen des Prolog Programmes durch Limitierung der interpretierten Fakten.}{fnc:debugger}
-\fulfills{crt:debugger}
 
 %%%%%%%%%%%
 \section{Nicht-Funktionale Anforderungen}
