spec: Add main view draft

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -425,9 +425,9 @@ Der aktuell angezeigte Graph lässt sich durch ein Dialogfenster als Bild export
 \section{Seitenentwürfe}
 
 \begin{figure}[hb]
-\fbox{\includegraphics[width=\textwidth]{image/example.png}}
+\fbox{\includegraphics[width=\textwidth]{image/main_view.png}}
 \caption{\label{fig:editor}
-Editor Hauptfenster
+Hauptfenster
 }
 \end{figure}
 
