--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -74,9 +74,9 @@ Die Entwicklungsumgebung beschränkt sich auf die Prolog-Sprache und bietet kein
 
 Das Produkt beschränkt sich auf eine graphische Darstellung über GUI-Elemente. Eine Interaktion über die Konsole ist nicht unterstützt.
 
-\criteriumNot{Nicht für professionelle Anwendung}{crt:notforprofessionaluse}
+\criteriumNot{Professionelle Anwendung}{crt:professionaluse}
 
-Die Software ist nicht für professionelle Anwendungszwecke ausgelegt. Bei Projekten mit über 2000 Fakten kann es zu Performanceeinbußen kommen.
+Die Software ist nicht für professionelle Anwendungszwecke ausgelegt.
 
 \pagebreak
 %%%%%%%%%%%%%%
