spec: Add Produktdaten
Specify what information we save and why.

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -104,6 +104,15 @@ Eine Maus sowie eine Tastatur sind als Eingabegeräte angeschlossen und funktion
 
 Eine Installation des Java Runtime Environments Version 8 aufwärts ist auf dem System vorhanden.
 
+\newpage
+
+%%%%%%%%%%%
+\section{Produktdaten}
+
+\textbf{Zuletzt geöffnete Dateien} \\
+Die Pfade der fünf zuletzt geöffneten Dateien werden für einen Eintrag im Kontextmenü gespeichert.
+
+Außer den oben gennanten werden keinerlei Daten gespeichert.
 %%%%%%%%%%%
 \section{Funktionale Anforderungen}
 
