spec: Fix correction at wrong location

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -144,7 +144,7 @@ Die Software kann den Inhalt des Editor-Puffers auf die Festplatte schreiben. Wu
 \functionality{Parsen einer im Editor geöffneten Prolog Datei}{fnc:parser}
 \fulfills{crt:parser}
 
-Der Inhalt einer geöffneten Datei kann durch einen Parser verarbeitet werden. Dies geschieht über eine Run-Schaltfläche im Editor. Wird der Parser über diese Schaltfläche gestartet, werden die Fenster der Konsole und der Visualisierung geleert. Ungesicherte Editor-Puffer müssen vor der Verarbeitung mit dem Parser gespeichert werden.
+Der Inhalt einer geöffneten Datei kann durch einen Parser verarbeitet werden. Dies geschieht über eine Parse-Schaltfläche im Editor. Wird der Parser über diese Schaltfläche gestartet, werden die Fenster der Konsole und der Visualisierung geleert. Ungesicherte Editor-Puffer müssen vor der Verarbeitung mit dem Parser gespeichert werden.
 
 \functionality{Fehlerausgabe beim Parsen einer inkorrekten Prolog Datei}{fnc:errorcheck}
 \fulfills{crt:errorcheck}
@@ -172,7 +172,7 @@ Bei aktiver Interpretation einer Abfrage wird eine Visualisierung für den aktue
 
 Über die Verwendung des Mausrads oder der Plus- und Minus-Schaltflächen lässt sich der angezeigte Ausschnitt des Visualisierungs-Graphen vergrößern oder verkleinern.
 
-\functionality{Navigation des visualisierten Graphen durch Bewegungen mit der Maus}{fnc:zoom}
+\functionality{Navigation des visualisierten Graphen durch Bewegungen mit der Maus}{fnc:move}
 \fulfills{crt:zoom}
 
 Durch Drücken und Halten der linken Maustaste lässt sich der angezeigte Ausschnitt des Visualisierungs-Graphen bewegen, wodurch der Graph navigiert werden kann.
