spec: Redo initial GUI draft as a template for the rest

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -563,12 +563,12 @@ Eine automatische Formatierung von Prolog-Quellcode ist über eine Schaltfläche
 \pagebreak
 \appendix
 
-\section{Seitenentwürfe}
+\section{GUI-Entwürfe}
 
 \begin{figure}[hb]
-\fbox{\includegraphics[width=\textwidth]{image/main_view.png}}
+\fbox{\includegraphics[width=\textwidth]{image/just_after_start.png}}
 \caption{\label{fig:editor}
-Hauptfenster
+Hauptfenster nach dem Starten des Programms ohne weitere Aktionen
 }
 \end{figure}
 
